force-app/main/default/objects/Litmos__UserModuleResult__c/Litmos__UserModuleResult__c.object-meta.xml
<CustomObject>
    <label>User Module Result</label>
    <nameField>
        <displayFormat>UMR-{00000000}</displayFormat>
        <label>UserModuleResults Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Module Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>