force-app/main/default/objects/Litmos__UserModuleResult__c/fields/Litmos__AttemptNumber__c.field-meta.xml
<CustomField>
    <fullName>Litmos__AttemptNumber__c</fullName>
    <label>Attempt Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>