force-app/main/default/objects/Litmos__UserModuleResult__c/fields/Litmos__ContactID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__ContactID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>User Module Results</relationshipLabel>
    <relationshipName>User_Module_Results</relationshipName>
    <type>Lookup</type>
</CustomField>