force-app/main/default/objects/Litmos__UserModuleResult__c/fields/Litmos__Finished__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Finished__c</fullName>
    <label>Finished</label>
    <type>DateTime</type>
</CustomField>