force-app/main/default/objects/Litmos__UserModuleResult__c/fields/Litmos__Learning_Path_Name__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Learning_Path_Name__c</fullName>
    <label>Learning Path Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>