force-app/main/default/objects/Litmos__UserModuleResult__c/fields/Litmos__Learning_Path_Percentage_Complete__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Learning_Path_Percentage_Complete__c</fullName>
    <label>Learning Path Percentage Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>