force-app/main/default/objects/Litmos__UserModuleResult__c/fields/Litmos__Module_Reference_Code__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Module_Reference_Code__c</fullName>
    <label>Module Reference Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>