force-app/main/default/objects/Litmos__UserModuleResult__c/fields/Litmos__ModuleNewID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__ModuleNewID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Module New</label>
    <referenceTo>Litmos__ModuleNew__c</referenceTo>
    <relationshipLabel>User Module Results</relationshipLabel>
    <relationshipName>User_Module_Results</relationshipName>
    <type>Lookup</type>
</CustomField>