force-app/main/default/objects/Litmos__UserModuleResult__c/fields/Litmos__Program_Module_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Program_Module_Display_Order__c</fullName>
    <label>Course Module Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>