force-app/main/default/objects/Litmos__UserModuleResult__c/fields/Litmos__Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Program_Name__c</fullName>
    <label>Course Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>