force-app/main/default/objects/Litmos__UserModuleResult__c/fields/Litmos__Program_Percentage_Complete__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Program_Percentage_Complete__c</fullName>
    <label>Program Percentage Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>