force-app/main/default/objects/Litmos__UserModuleResult__c/fields/Litmos__report_url__c.field-meta.xml
<CustomField>
    <fullName>Litmos__report_url__c</fullName>
    <formula>HYPERLINK(&apos;/00OU0000002rGAx&apos;,  Litmos__Learning_Path_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Url</label>
    <type>Text</type>
</CustomField>