force-app/main/default/objects/Litmos__UserModuleResult__c/fields/Litmos__Score__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>