force-app/main/default/objects/Litmos__UserModuleResult__c/fields/Litmos__Started__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Started__c</fullName>
    <label>Started</label>
    <type>DateTime</type>
</CustomField>