force-app/main/default/objects/Litmos__UserModuleResult__c/fields/Litmos__TimeTaken__c.field-meta.xml
<CustomField>
    <fullName>Litmos__TimeTaken__c</fullName>
    <label>Time Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>