force-app/main/default/objects/Litmos__UserModuleResult__c/listViews/Litmos__All.listView-meta.xml
<ListView>
    <fullName>Litmos__All</fullName>
    <columns>NAME</columns>
    <columns>Litmos__LitmosID__c</columns>
    <columns>Litmos__Learning_Path_Name__c</columns>
    <columns>Litmos__Program_Name__c</columns>
    <columns>Litmos__UserID__c</columns>
    <columns>Litmos__User_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>